proyecto/parkings/k8s/autenticacion-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: autenticacion-api
  labels:
    app: autenticacion-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: autenticacion-api
  template:
    metadata:
      labels:
        app: autenticacion-api
    spec:
      containers:
        - name: autenticacion-api
          image: isi3/autenticacion-api:latest
          ports:
            - containerPort: 9099
