proyecto/parkings/k8s/parkings-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: parkings-api
  labels:
    app: parkings-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: parkings-api
  template:
    metadata:
      labels:
        app: parkings-api
    spec:
      containers:
        - name: parkings-api
          image: isi3/parkings-api:latest
          ports:
            - containerPort: 9090
