proyecto/parkings/k8s/autenticacion-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: autenticacion-api
  labels:
    app: autenticacion-api
spec:
  type: NodePort           # <-- Cambia aquí
  ports:
    - port: 9099
      targetPort: 9099
      nodePort: 30098
  selector:
    app: autenticacion-api
