proyecto/parkings/k8s/mongo-headless-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  labels:
    app: mongodb
spec:
  clusterIP: None # Headless service
  ports:
    - port: 27017
      targetPort: 27017
  selector:
    app: mongodb
