proyecto/parkings/k8s/parkings-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: parkings-api
  labels:
    app: parkings-api
spec:
  type: NodePort
  ports:
    - port: 9090
      targetPort: 9090
      nodePort: 30099
  selector:
    app: parkings-api
