proyecto/parkings/k8s/parkings-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: parkings-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /api/$2
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /parkings-api(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: parkings-api
                port:
                  number: 9090
          - path: /autenticacion-api(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: autenticacion-api
                port:
                  number: 9099
